--- a/trading_rl/config/sb3_finance_hyperparams.yaml
+++ b/trading_rl/config/sb3_finance_hyperparams.yaml
@@ -1,3 +1,4 @@
+# trading_rl/config/sb3_finance_hyperparams.yaml
 # Reasonable starting hyperparams for trading-like continuous-control tasks.
 # Designed to plug into the runner and ALGO_REGISTRY factories (params dict).
 #
@@ -26,16 +27,20 @@ ppo:
   ent_coef: 0.001
   vf_coef: 0.5
   max_grad_norm: 0.5
+  env:
+    n_envs_train: 8
 
 a2c:
-  learning_rate: 7.0e-4
-  n_steps: 5
+  learning_rate: 3.0e-4
+  n_steps: 128
   gamma: 0.99
-  gae_lambda: 1.0
-  ent_coef: 0.01
+  gae_lambda: 0.95
+  ent_coef: 0.0
   vf_coef: 0.5
   max_grad_norm: 0.5
-
+  env:
+    n_envs_train: 8
+    
 sac:
   learning_rate: 3.0e-4
   buffer_size: 1000000
@@ -44,8 +49,10 @@ sac:
   tau: 0.005
   ent_coef: auto
   train_freq: 1
-  gradient_steps: 2
-  learning_starts: 50000
+  gradient_steps: 1
+  learning_starts: 10000
+  env:
+    n_envs_train: 1 
 
 td3:
   learning_rate: 3.0e-4
@@ -57,8 +64,11 @@ td3:
   gradient_steps: 1
   learning_starts: 10000
   policy_delay: 2
-  target_policy_noise: 0.2
-  target_noise_clip: 0.5
+  target_policy_noise: 0.1
+  target_noise_clip: 0.3
+  exploration_noise: 0.1
+  env:
+    n_envs_train: 1 
 
 vecnormalize:
   enable: true
@@ -67,8 +77,11 @@ vecnormalize:
   clip_obs: 10.0
 
 env:
-  trading_cost_pct: 0.0001
+  trading_cost_pct: 0.001
   reward_mode: diff_return
-  reward_scaling: 1000.0
-  window_size: 256
+  reward_scaling: 100.0
+  window_size: 512
   random_start: true
+  n_envs_train: 1          # for PPO/A2C
+  n_envs_eval: 1           # keep 1 for eval unless you really want parallel eval
+  vec_env_type: dummy      # dummy | subproc
