fix some issues, configure better logging

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,11 @@ dev = [
     "pytest>=9.0.2",
     "ruff>=0.14.8",
 ]
+cuda126 = [
+    "torch",
+    "torchvision",
+    "torchaudio",
+]
 
 [tool.setuptools.packages.find]
 include = ["trading_rl*"]
