--- a/scripts/config.yaml
+++ b/scripts/config.yaml
@@ -3,7 +3,7 @@ experiments:
     algo:
       policy: MlpPolicy
       policy_kwargs:
-        net_arch: [256, 256]
+        net_arch: [128, 128]
         activation_fn: ReLU
       device: auto
       verbose: 1
@@ -12,7 +12,7 @@ experiments:
       n_steps: 512
       batch_size: 256
       n_epochs: 3
-      gamma: 0.998
+      gamma: 0.99
       gae_lambda: 0.95
       clip_range: 0.2
       ent_coef: 0.001
@@ -28,18 +28,20 @@ experiments:
     algo:
       policy: MlpPolicy
       policy_kwargs:
-        net_arch: [256, 256]
+        net_arch: [128, 128]
         activation_fn: ReLU
       device: auto
       verbose: 1
 
       learning_rate: 3.0e-4
-      n_steps: 128
+      n_steps: 256
       gamma: 0.99
       gae_lambda: 0.95
       ent_coef: 0.0
       vf_coef: 0.5
       max_grad_norm: 0.5
+    run:
+      total_timesteps: 1000000
 
     env:
       n_envs_train: 8
@@ -48,7 +50,7 @@ experiments:
     algo:
       policy: MlpPolicy
       policy_kwargs:
-        net_arch: [256, 256]
+        net_arch: [128, 128]
         activation_fn: ReLU
       device: auto
       verbose: 1
@@ -61,9 +63,9 @@ experiments:
       ent_coef: auto
       train_freq: 1
       gradient_steps: 1
-      learning_starts: 10000
+      learning_starts: 20000
     run:
-      total_timesteps: 250000
+      total_timesteps: 500000
 
     env:
       n_envs_train: 1
@@ -72,7 +74,7 @@ experiments:
     algo:
       policy: MlpPolicy
       policy_kwargs:
-        net_arch: [256, 256]
+        net_arch: [128, 128]
         activation_fn: ReLU
       device: auto
       verbose: 1
@@ -84,11 +86,13 @@ experiments:
       tau: 0.005
       train_freq: 1
       gradient_steps: 1
-      learning_starts: 10000
+      learning_starts: 20000
       policy_delay: 2
       target_policy_noise: 0.1
       target_noise_clip: 0.3
       exploration_noise: 0.1
+    run:
+      total_timesteps : 500000
 
     env:
       n_envs_train: 1
@@ -96,7 +100,7 @@ experiments:
 run:
   envs: [windowed]
   seeds: [13, 42, 67, 69, 91]
-  total_timesteps: 250000
+  total_timesteps: 1000000
   eval_freq: 8192
   eval_episodes: 1
   wandb_log_freq: 1024
@@ -117,13 +121,14 @@ vecnormalize:
 
 env:
   trading_cost_pct: 0.001
-  reward_mode: diff_return
-  reward_scaling: 100.0
+  reward_mode: log_return
+  reward_scaling: 1.0
   window_size: 512
   random_start: true
   n_envs_train: 1
   n_envs_eval: 1
   vec_env_type: dummy  # dummy | subproc
+  obs_include_pnl: true
   verbose: 1
 
 regimes:
